
== Unreleased

=== Fixed

* Use File.read instead of IO.read to suppress magic subprocess behavior
* Enable compatibility with Ruby 3 by declaring rexml as a runtime dependency (#84)
* Don't crash when converting list item that only contains spaces (#83)

=== Changed

* Upgrade kramdown to 2.3.x and declare kramdown-parser-gfm as runtime dependency (#85)
* Switch CI to GitHub Actions

== 1.0.1 (2018-11-28) - @mojavelinux

=== Fixed

* Fixed bin script on Ruby 2.3 (#70)

=== Details

{uri-repo}/releases/tag/v1.0.1[git tag] | {uri-repo}/compare/v1.0.0\...v1.0.1[full diff]

== 1.0.0 (2018-11-07) - @mojavelinux

=== Changed

* change CLI to use default options from API

=== Fixed

* automatically require version file so -v CLI flag reports correct version

=== Details

{uri-repo}/releases/tag/v1.0.0[git tag] | {uri-repo}/compare/v1.0.0.rc.1\...v1.0.0[full diff]

== 1.0.0.rc.1 (2018-11-06) - @mojavelinux

=== Added

* ventilate prose on semi-colon following non-space character
* add :preprocessors option to convert API; apply default preprocessors if not set; apply none if falsy (#23)
* add :postprocessors option to convert API; takes precedence over :postprocess option (#67)
* accept IO object as input to convert method (#49)
* accept File object as input to convert_file method (#49)
* add API docs to public API methods

=== Changed

* remove whitespace in front of leading XML comment (so a block comment isn't mistaken for an inline comment)
* drop empty XML comment unless it comes after a list

=== Details

{uri-repo}/releases/tag/v1.0.0.rc.1[git tag] | {uri-repo}/compare/v1.0.0.alpha.13\...v1.0.0.rc.1[full diff]

== 1.0.0.alpha.13 (2018-08-21) - @mojavelinux

=== Added

* drop ID on section title if matches auto-generated value when :lazy_ids API option / --lazy-ids CLI option is set (#16)
* auto-generate IDs for section titles when :auto_ids option is set and :input is not GFM
* add :postprocess callback option to `convert` and `convert_file` API methods (#53)
